--- a/tikz_annotate.Rmd
+++ b/tikz_annotate.Rmd
@@ -3,9 +3,9 @@ title: "Tikz Annotate Demo"
 output:
   html_document: default
   pdf_document: default
-header-includes: \usepackage{tikz}
+header-includes: 
+  - \usepackage{tikz}
 ---
-
 
 ```{r setup, include=FALSE}
 library(gplots)
@@ -23,9 +23,9 @@ dev.off()
 ```
 
 ```{r tikz-ex, engine = "tikz", fig.width=8, echo = FALSE}
-\newcommand{\annotate}[7]{
-	\node at (#3) [draw,#2,minimum width=#4,minimum height=#5, anchor=south west, draw opacity=1] (#1_rect) {};
-	\node[circle,draw, #7, inner sep=2pt, anchor=south] (#1_circle) at (#1_rect.#6) {\LARGE \textbf{#1}};
+\newcommand{\annotate}[8]{
+	\node at (#3) [draw,#2,minimum width=#4,minimum height=#5, anchor=south west, draw opacity=1] (rect_#1) {};
+	\node[circle,draw, #7, inner sep=2pt, anchor=#8] (circle_#1) at (rect_#1.#6) {\LARGE \textbf{#1}};
 }
 
 \newenvironment{annotated_figure}[1]{
@@ -37,10 +37,11 @@ dev.off()
 }
 
 \begin{annotated_figure}{lm_summary.png}
-	\annotate{1}{blue, fill=blue, opacity=0.05}{0.105, 0.62}{12cm}{1.1cm}{north}{blue}
-	\annotate{2}{red,  fill=red,  opacity=0.05}{0.258, 0.35}{2.3cm}{2cm}{north}{red}
-	\annotate{3}{red,  fill=red,  opacity=0.05}{0.372, 0.35}{2.8cm}{2cm}{north}{red}
-	\annotate{4}{red,  fill=red,  opacity=0.05}{0.509, 0.35}{2.1cm}{2cm}{north}{red}
-	\annotate{5}{red,  fill=red,  opacity=0.05}{0.613, 0.35}{2.2cm}{2cm}{north}{red}
+	\annotate{1}{blue, fill=blue, opacity=0.05}{0.100, 0.62}{11cm}{1.1cm}{west}{blue}{east}
+	\annotate{2}{red,  fill=red,  opacity=0.05}{0.256, 0.35}{2.3cm}{2cm}{north}{red}{south}
+	\annotate{3}{red,  fill=red,  opacity=0.05}{0.371, 0.35}{2.8cm}{2cm}{north}{red}{south}
+	\annotate{4}{red,  fill=red,  opacity=0.05}{0.509, 0.35}{2.0cm}{2cm}{north}{red}{south}
+	\annotate{5}{red,  fill=red,  opacity=0.05}{0.610, 0.35}{3.3cm}{2cm}{north}{red}{south}
+	\annotate{6}{teal, fill=teal,  opacity=0.05}{0.100, 0.125}{18cm}{0.5cm}{east}{teal}{west}
 \end{annotated_figure}
 ```
