--- a/tikz_annotate.tex
+++ b/tikz_annotate.tex
@@ -2,6 +2,7 @@
 \documentclass{article}
 
 \usepackage{graphicx}
+\usepackage{xcolor}
 
 \usepackage{tikz}
 
@@ -33,7 +34,7 @@
 	\annotate{2}{red, opacity=0.1}{0.270, 0.35}{2.3cm}{2cm}{north}{fill=red, text=white}
 	\annotate{3}{red, opacity=0.1}{0.384, 0.35}{2.8cm}{2cm}{north}{fill=red, text=white}
 	\annotate{4}{red, opacity=0.1}{0.521, 0.35}{2.1cm}{2cm}{north}{fill=red, text=white}
-	\annotate{5}{red, opacity=0.1}{0.625, 0.35}{2.2cm}{2cm}{north}{fill=red, text=white}
+	\annotate{5}{red, opacity=0.1}{0.625, 0.35}{2.2cm}{2cm}{north}{fill=teal, text=white}
 	%\annotate{A}{0.27,0.55}{0.375,0.35}{0.2,1}{A}{red}
 	%\annotate{B}{0.38,0.55}{0.518,0.35}{0.4,1}{B}{blue}
 	%\annotate{C}{0.52,0.55}{0.618,0.35}{0.6,1}{C}{red}
