--- a/tikz_annotate.Rmd
+++ b/tikz_annotate.Rmd
@@ -42,6 +42,6 @@ dev.off()
 	\annotate{3}{red,  fill=red,  opacity=0.05}{0.371, 0.35}{2.8cm}{2cm}{north}{red}{south}
 	\annotate{4}{red,  fill=red,  opacity=0.05}{0.509, 0.35}{2.0cm}{2cm}{north}{red}{south}
 	\annotate{5}{red,  fill=red,  opacity=0.05}{0.610, 0.35}{3.3cm}{2cm}{north}{red}{south}
-	\annotate{6}{teal, fill=teal,  opacity=0.05}{0.100, 0.125}{18cm}{0.5cm}{east}{teal}{west}
+	\annotate{6}{teal, fill=teal,  opacity=0.05}{0.100, 0.125}{17cm}{0.5cm}{west}{teal}{east}
 \end{annotated_figure}
 ```
