--- a/tikz_annotate.Rmd
+++ b/tikz_annotate.Rmd
@@ -26,7 +26,7 @@ invisible(dev.off())
 
 **Step 3.** You're done. There's no step 3.
 
-Code is available here: http://github.com/altaf-ali/tikz_annotate
+Code is available here: <a href="http://github.com/altaf-ali/tikz_annotate" target="_blank">http://github.com/altaf-ali/tikz_annotate</a>
 
 ```{r tikz-ex, engine = "tikz", fig.width=8, echo=FALSE}
 % --- annotate command
