--- a/rtikz.Rmd
+++ b/rtikz.Rmd
@@ -4,8 +4,6 @@ output:
   html_document: 
     code_folding: hide
   pdf_document: default
-header-includes: 
-  \usepackage{tikz}
 ---
 
 Annotating text output on the fly....
@@ -17,7 +15,7 @@ model <- lm(mpg ~ wt, mtcars)
 
 captured_text <- capture.output(summary(model))
 
-png("lm_summary.png", width=2, height=1, units="in", res=300, pointsize=2)
+png("model_summary.png", width=2, height=1, units="in", res=300, pointsize=2)
 gplots::textplot(captured_text, mar=c(0,0,0,0))
 invisible(dev.off())
 ```
@@ -28,38 +26,11 @@ invisible(dev.off())
 
 Code is available here: <a href="http://github.com/altaf-ali/tikz_annotate" target="_blank">http://github.com/altaf-ali/tikz_annotate</a>
 
-```{r tikz-ex, engine = "tikz", fig.width=8, echo=FALSE}
-% --- annotate command
-%   arguments:
-%    1. text label
-%    2. color options of the rectangle
-%    3. x,y coordinate of the rectangle
-%    4. width of the rectagle
-%    5. height of the rectagle
-%    6. anchor of the rectagle
-%    7. color options of the text label
-%    8. anchor of the text label
-%
-\newcommand{\annotate}[8]{
-	\node at (#3) [draw,#2,minimum width=#4,minimum height=#5, anchor=south west, draw opacity=1] (rect_#1) {};
-	\node[circle,draw, #7, inner sep=2pt, anchor=#8] (circle_#1) at (rect_#1.#6) {\LARGE \textbf{#1}};
-}
-
-% --- annotated_figure environment 
-%   arguments: 
-%     1. name of a graphics file, generally a .png file 
-%
-\newenvironment{annotated_figure}[1]{
-	\begin{tikzpicture}
-		\node [anchor=south west, inner sep=0,outer sep=0] (image) at (0,0) {\includegraphics{#1}};
-		\begin{scope}[x={(image.south east)},y={(image.north west)}]}{
-		\end{scope}
-	\end{tikzpicture}
-}
-
+```{r tikz-ex1, engine = "tikz", fig.width=8}
+\input{../PUBLG100/tikz/tikzlibraryannotate.code}
 \definecolor{darkgreen}{RGB}{0,128,0}
 		  
-\begin{annotated_figure}{lm_summary.png}
+\begin{annotated_figure}{model_summary.png}
 	\annotate{1}{blue, fill=blue, opacity=0.05}{0.100, 0.62}{11cm}{1.1cm}{west}{blue}{east}
 	\annotate{2}{red,  fill=red,  opacity=0.05}{0.256, 0.35}{2.3cm}{2cm}{north}{red}{south}
 	\annotate{3}{red,  fill=red,  opacity=0.05}{0.371, 0.35}{2.8cm}{2cm}{north}{red}{south}
@@ -68,6 +39,7 @@ Code is available here: <a href="http://github.com/altaf-ali/tikz_annotate" targ
 	\annotate{6}{darkgreen, fill=darkgreen, opacity=0.05}{0.100, 0.125}{17cm}{0.5cm}{west}{darkgreen}{east}
 \end{annotated_figure}
 ```
+
 
 ```{r}
 knitr::kable(tibble::tribble(
